// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > KeyStore.getKey() 1`] = `undefined`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('THEME') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > Storage.get('USERNAME') 1`] = `null`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > allCalls 1`] = `
[
  [
    "invoke",
    {
      "calledWith": {
        "maxBackupsCount": 3,
        "notes": [
          Note {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "timestamp": 0,
            "uuid": "uuid",
          },
          Note {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "timestamp": 0,
            "uuid": "uuid",
          },
        ],
      },
      "name": "backup_notes",
    },
  ],
]
`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > openedPopup 1`] = `undefined`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > selectedTheme 1`] = `"System"`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`backupNotes > Calls backup_notes invoke with notes and maxBackupsCount > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
